protocols/tests/adders/adder_d1/add_incorrect.out
error: Thread 0 (`add_incorrect`) attempted conflicting assignment to 'a': current=4, new=1
   ┌─ adders/adder_d1/add_d1.prot:47:3
   │
47 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 0 (`add_incorrect`) attempted conflicting assignment to 'a': current=4, new=1

error: Thread 1 (`add_incorrect`) attempted conflicting assignment to 'a': current=1, new=4
   ┌─ adders/adder_d1/add_d1.prot:44:3
   │
44 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 1 (`add_incorrect`) attempted conflicting assignment to 'a': current=1, new=4

Trace 0 failed: Thread(ConflictingAssignment { symbol_id: symbol1, symbol_name: "a", current_value: ValueOwned(00000000000000000000000000000100), new_value: ValueOwned(00000000000000000000000000000001), thread_idx: 0, transaction_name: "add_incorrect", stmt_id: stmt4 })
Trace 0 failed: Thread(ConflictingAssignment { symbol_id: symbol1, symbol_name: "a", current_value: ValueOwned(00000000000000000000000000000001), new_value: ValueOwned(00000000000000000000000000000100), thread_idx: 1, transaction_name: "add_incorrect", stmt_id: stmt1 })
Trace 0 execution failed.
